# idamcp

./: .gitignore  .mcp.json  README.md  idamcp_plugin.py  install.py  mcp.json  pyproject.toml
idamcp/: bridge.py  config.py  plugin.py  server.py  ui.py
tests/: test_bridge.py  test_server.py
typings/ida_idaapi/: __init__.pyi
typings/ida_kernwin/: __init__.pyi
