[project]
name = "idamcp"
version = "0.1.0"
description = "IDA Python MCP Server - Expose IDA Python via MCP over SSE"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "uvicorn>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
stubPath = "typings"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
